# awesome-ai-agents

./: .gitignore  fastagent.config.yaml  fastagent.secrets.yaml.example  messages.pot  pyproject.toml
i18n/en_US/LC_MESSAGES/: messages.mo  messages.po
i18n/zh_CN/LC_MESSAGES/: messages.mo  messages.po
scripts/: add_i18n_new_language.bat  add_i18n_new_language.sh  compile_i18n_messages.bat  compile_i18n_messages.sh  update_i18n_messages.bat  update_i18n_messages.sh
src/: agents.py  code_mate_agent.py
src/mcp/: code_mate.py  common.py  i18n.py  mcp_server_code_mate.py  mcp_server_translation.py
